# tapy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
assets/: logo.xcf
backend/: Cargo.toml  build.rs
backend/migrations/2022-07-04-211857_create_tags/: down.sql  up.sql
backend/migrations/2022-07-04-211904_create_items/: down.sql  up.sql
backend/migrations/2022-07-04-211907_create_items_tags/: down.sql
backend/src/: lib.rs  main.rs
backend/src/api/: files.rs  item_controller.rs  mod.rs  tag_controller.rs  user.rs
backend/src/db/: db.rs  mod.rs  schema.rs
backend/src/db/crud/: items.rs  items_tags.rs  tags.rs
backend/src/db/models/: item.rs  item_tag.rs  mod.rs  tag.rs
backend/src/services/: api.rs  mod.rs  spa.rs
betterdiscord_plugin/: .gitattributes  README.md  package.json  tsconfig.json
betterdiscord_plugin/src/: tapy.plugin.tsx
common/: Cargo.toml
common/migrations/2022-07-04-211907_create_items_tags/: up.sql
common/src/: db.rs  lib.rs
common/src/crud/: items.rs  items_tags.rs  mod.rs  tags.rs
common/src/model/: media_item.rs  mod.rs
common/src/models/: item.rs  item_tag.rs  tag.rs
common/src/util/: fs.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/componenets/: add.rs  home.rs  item.rs  mod.rs  not_found.rs
frontend/src/components/: gallery.rs  home.rs  items_by_tags.rs  mod.rs
src/: entry_completion.rs  main.rs  scrolled_window.rs  ui.rs
src/loaders/: iter.rs
src/media/: iter.rs  mod.rs
src/utils/: fs.rs  mod.rs
