[package]
name = "tapy"
version = "0.1.0"
authors = ["Pavel Atanasov <pavel.atanasov2001@gmail.com>"]
description = "Tapy (Tag and Copy) - A tool for tagging and quickly accessing all kinds of media"
license = "GPL-3.0"
repository = "https://www.github.com/reo101/tapy"
edition = "2021"

[dependencies]
gtk = { version = "0.3.1", package = "gtk4" } # GUI backend
copypasta = "0.7.1"                           # Clipboard management
confy = "0.4.0"                               # Configuration management
directories-next = "2.0.0"                    # Directory management
serde = "1.0.131"                             # Database
