[package]
name = "tapy"
version = "0.1.0"
authors = ["Pavel Atanasov <pavel.atanasov2001@gmail.com>"]
description = "Tapy (Tag and Copy) - A tool for tagging and quickly accessing all kinds of media"
license = "GPL-3.0"
repository = "https://www.github.com/reo101/tapy"
edition = "2021"

[dependencies]
# gtk = { version = "0.3.1", package = "gtk4" }                                                # GUI backend
gtk = { path = "../../../../.local/src/gtk4-rs/gtk4", package = "gtk4", features = ["v4_4"] }  # GUI backend
# gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }                        # GUI backend
# gtk = { version = "0.3.1", package = "gtk4" }                                                # GUI backend
notify-rust = "4.5.5"
copypasta = "0.7.1"                                                                            # Clipboard management
which = "4.2.2"
log = "0.4.14"                                                                                 # Logging
once_cell = "1.9.0"
directories-next = "2.0.0"                                                                     # Directory management
serde = { version = "1.0.133", features = ["derive"] }                                         # Database
serde_json = "1.0.74"
