[package]
name = "tapy-backend"
version = "0.1.0"
authors = ["Pavel Atanasov <pavel.atanasov2001@gmail.com>"]
description = "Tapy (Tag and Copy) - A tool for tagging and quickly accessing all kinds of media"
license = "GPL-3.0"
repository = "https://www.github.com/reo101/tapy"
edition = "2021"

[dependencies]
actix-web = "4"
awmp = "0.8.1"
actix-files = "0.6"
actix-web-lab = "^0"
diesel = { version = "^1.1.0", features = ["sqlite"] }
env_logger = "0.9"
serde = { version = "^1", features = ["derive"] }
common = { path = "../common" }
