[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenvy = "0.15.1"
directories-next = "2.0.0"
uuid = { version = "^1.1", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
getrandom = { version = "^0.2.7", features = ["js"] }
derive_more = "^0.99"
