[package]
name = "tapy_frontend"
version = "0.1.0"
authors = ["Pavel Atanasov <pavel.atanasov2001@gmail.com>"]
description = "Tapy (Tag and Copy) - A tool for tagging and quickly accessing all kinds of media"
license = "GPL-3.0"
repository = "https://www.github.com/reo101/tapy"
edition = "2021"

[dependencies]
yew = "^0.19"
yew-router = "^0.16"
reqwasm = "^0.5"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.58"
gloo = "0.8.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
log = "0.4.17"
wasm-logger = "^0.2"
dotenvy = "0.15.1"
dotenvy_macro = "0.15.1"
